# case-cli

./: .env.example  MANIFEST.in  README.md  SETUP.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
Formula/: case-cli.rb
case_cli/: __init__.py  __main__.py  config.py  converter.py  main.py
case_cli/completions/: case-cli.bash  case-cli.zsh
case_cli/styles/: ada.py  base.py  camel.py  cobol.py  constant.py  dot.py  header.py  kebab.py  lower.py  pascal.py  random_case.py  sentence.py  snake.py  title.py  train.py  upper.py
tests/: test_config.py  test_converter.py
tests/test_styles/: test_each_style.py
