[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-cli"
version = "0.1.2"
description = "A command-line tool for converting strings between different case styles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "sigaocaue" },
]
keywords = ["case", "cli", "converter", "snake-case", "camel-case", "string"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/sigaocaue/case-cli"
Repository = "https://github.com/sigaocaue/case-cli"
Issues = "https://github.com/sigaocaue/case-cli/issues"

[project.scripts]
case-cli = "case_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "bump-my-version>=0.28",
]

[tool.setuptools.packages.find]
include = ["case_cli*"]

[tool.setuptools.package-data]
case_cli = ["completions/*"]

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "release: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "case_cli/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
