[metadata]
name = case-cli
version = 0.1.0
description = A command-line tool for converting strings between different case styles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sigaocaue/case-cli
author = sigaocaue
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Text Processing
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
include =
    case_cli
    case_cli.*

[options.entry_points]
console_scripts =
    case-cli = case_cli.main:main
